Risultato finale in pagina

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <main>
             <div id="container">
                 <div id="grid"></div> 
+                <div id="result"></div>
             </div>
         </main>
 
